--- a/SkeltonAspNetApp/Web.Debug.config
+++ b/SkeltonAspNetApp/Web.Debug.config
@@ -14,6 +14,12 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <!-- see : https://msdn.microsoft.com/en-us/library/jj653752(v=vs.110).aspx -->
+  <connectionStrings>
+    <add name="SkeltonDbConn"
+         providerName="System.Data.SqlClient"
+         connectionString="Data Source=localhost;Initial Catalog=aspnetskel1;Integrated Security=False;User Id=skelton;Password=skelton01;MultipleActiveResultSets=True"/>
+  </connectionStrings>
   <system.web>
     <!--
       以下の例では、"Replace" 変換により Web.config ファイルの
