IdentityDbContext 派生クラスが接続文字列名を DefaultConnection として指定しているので、そちらに準拠。

--- a/SkeltonAspNetApp/Web.Debug.config
+++ b/SkeltonAspNetApp/Web.Debug.config
@@ -16,7 +16,7 @@
   -->
   <!-- see : https://msdn.microsoft.com/en-us/library/jj653752(v=vs.110).aspx -->
   <connectionStrings>
-    <add name="SkeltonDbConn"
+    <add name="DefaultConnection"
          providerName="System.Data.SqlClient"
          connectionString="Data Source=localhost;Initial Catalog=aspnetskel1;Integrated Security=False;User Id=skelton;Password=skelton01;MultipleActiveResultSets=True"/>
   </connectionStrings>
