--- a/SkeltonAspNetApp/Web.config
+++ b/SkeltonAspNetApp/Web.config
@@ -9,7 +9,14 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SkeltonAspNetApp-20180428063535.mdf;Initial Catalog=aspnet-SkeltonAspNetApp-20180428063535;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection"
+         providerName="System.Data.SqlClient"
+         connectionString="Data Source=localhost;
+         Initial Catalog=aspnetskel1;
+         Integrated Security=False;
+         User Id=skelton;
+         Password=skelton01;
+         MultipleActiveResultSets=True"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
